log
Thu Apr 30 08:02:57 PM UTC 2026: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  3|7
total_score: 5/60
e4f9b69
Thu Apr 30 08:12:16 PM UTC 2026: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:127:12: error: implicit declaration of function ‘lower_than’ [-Wimplicit-function-declaration]
  127 |         if(lower_than(aux -> pair -> key, aux -> parent -> pair -> key) == 1){
      |            ^~~~~~~~~~
e34495f
Thu Apr 30 08:13:13 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 8/60
2cd24fb
Thu Apr 30 08:14:36 PM UTC 2026: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|7
total_score: 8/60
4307a5b
Thu Apr 30 08:14:57 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 8/60
047b5eb
Thu Apr 30 08:18:26 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|6
total_score: 15/60
bd245fe
Thu Apr 30 08:39:10 PM UTC 2026: 
 tests:  8|6
total_score: 15/60
20ed9bd
Thu Apr 30 08:47:22 PM UTC 2026: 
 tests:  8|6
total_score: 15/60
b0d141b
Fri May  1 11:05:26 PM UTC 2026: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  8|6
total_score: 15/60
5629389
Fri May  1 11:05:45 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|5
total_score: 20/60
c6f7692
Fri May  1 11:54:18 PM UTC 2026: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:59:32: error: expected identifier before ‘&&’ token
   59 |     if(tree -> root -> left -> && tree -> root -> right == NULL && tree -> root -> pair -> key == key) return NULL;
      |                                ^~
a1761db
Fri May  1 11:54:37 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|5
total_score: 20/60
2d97125
Sat May  2 12:01:57 AM UTC 2026: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:60:15: error: unused variable ‘aux’ [-Werror=unused-variable]
   60 |     TreeNode* aux = tree -> root;
      |               ^~~
cc1: all warnings being treated as errors
7d3cf4a
Sat May  2 12:09:15 AM UTC 2026: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  11|5
total_score: 20/60
a4ef3c8
Sat May  2 12:10:04 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|5
total_score: 20/60
1c99638
Sat May  2 12:12:21 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|5
total_score: 20/60
f1a8057
Sat May  2 12:13:58 AM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|5
total_score: 20/60
c953cfb
Sat May  2 12:14:18 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|5
total_score: 20/60
a8c4d86
Sat May  2 12:14:48 AM UTC 2026: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
41bb8e6
Sat May  2 12:15:12 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|5
total_score: 20/60
52eaf90
Sat May  2 12:16:08 AM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|5
total_score: 20/60
80670b0
Sat May  2 12:19:08 AM UTC 2026: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  18|4
total_score: 30/60
aef7f4e
Sat May  2 12:20:08 AM UTC 2026: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  18|4
total_score: 30/60
1ef7199
Sat May  2 12:38:41 AM UTC 2026: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  20|3
total_score: 30/60
d985169
Sat May  2 02:32:37 AM UTC 2026: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  21|3
total_score: 33/60
89a4ce0
Sat May  2 02:38:25 AM UTC 2026: 
 treemap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  21|3
total_score: 33/60
0e2f3da
Sat May  2 03:56:00 PM UTC 2026: 
 tests:  21|3
total_score: 33/60
7f05991
Sat May  2 09:55:13 PM UTC 2026: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:121:15: error: implicit declaration of function ‘minimun’; did you mean ‘minimum’? [-Wimplicit-function-declaration]
  121 |         aux = minimun(aux);
      |               ^~~~~~~
      |               minimum
treemap.c:121:13: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  121 |         aux = minimun(aux);
      |             ^
treemap.c:122:35: error: ‘TreeNode’ has no member named ‘key’
  122 |         node -> pair -> key = aux -> key;
      |                                   ^~
treemap.c:123:22: error: ‘Pair’ has no member named ‘data’
  123 |         node -> pair -> data = aux -> data;
      |                      ^~
treemap.c:123:36: error: ‘TreeNode’ has no member named ‘data’
  123 |         node -> pair -> data = aux -> data;
      |                                    ^~
7b1c379
Sat May  2 09:55:48 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:122:35: error: ‘TreeNode’ has no member named ‘key’
  122 |         node -> pair -> key = aux -> key;
      |                                   ^~
treemap.c:123:37: error: ‘TreeNode’ has no member named ‘value’
  123 |         node -> pair -> value = aux -> value;
      |                                     ^~
6026979
Sat May  2 09:56:03 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  21|3
total_score: 33/60
c7655cd
Sat May  2 10:07:24 PM UTC 2026: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  21|3
total_score: 33/60
593938a
Sat May  2 10:14:09 PM UTC 2026: 
 treemap.c | 26 +++++++++++++++++++-------
 1 file changed, 19 insertions(+), 7 deletions(-)
 tests:  21|3
total_score: 33/60
10382b2
Sat May  2 10:24:15 PM UTC 2026: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  21|3
total_score: 33/60
16b995b
Sat May  2 10:52:55 PM UTC 2026: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  0|0
ea17ebf
Sat May  2 10:56:21 PM UTC 2026: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  22|3
total_score: 33/60
688befc
